--- a/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-feature-extraction/your-code/main.ipynb
@@ -2100,13 +2100,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "DataFrame.join(self, other, on=None, how='left', lsuffix='', rsuffix='', sort=False)\n",
-    "google_review_removed.join(google_agg, on=\"App\", how='left')"
+    "#DataFrame.join(self, other, on=None, how='left', lsuffix='', rsuffix='', sort=False)\n",
+    "#google_review_removed.join(google_agg, on=\"App\", how='inner')\n",
+    "\n",
+    "df_merged = pd.merge(google_review_removed, google_agg, on=\"App\")"
    ]
   },
   {
@@ -2120,12 +2122,120 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>App</th>\n",
+       "      <th>Translated_Review</th>\n",
+       "      <th>Sentiment</th>\n",
+       "      <th>Sentiment_Polarity</th>\n",
+       "      <th>Sentiment_Subjectivity</th>\n",
+       "      <th>Possitive_ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>I like eat delicious food. That's I'm cooking ...</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.533333</td>\n",
+       "      <td>0.835052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>This help eating healthy exercise regular basis</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.288462</td>\n",
+       "      <td>0.835052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>Works great especially going grocery store</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.875000</td>\n",
+       "      <td>0.835052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>Best idea us</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.300000</td>\n",
+       "      <td>0.835052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10 Best Foods for You</td>\n",
+       "      <td>Best way</td>\n",
+       "      <td>Positive</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.300000</td>\n",
+       "      <td>0.835052</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     App                                  Translated_Review  \\\n",
+       "0  10 Best Foods for You  I like eat delicious food. That's I'm cooking ...   \n",
+       "1  10 Best Foods for You    This help eating healthy exercise regular basis   \n",
+       "2  10 Best Foods for You         Works great especially going grocery store   \n",
+       "3  10 Best Foods for You                                       Best idea us   \n",
+       "4  10 Best Foods for You                                           Best way   \n",
+       "\n",
+       "  Sentiment  Sentiment_Polarity  Sentiment_Subjectivity  Possitive_ratio  \n",
+       "0  Positive                1.00                0.533333         0.835052  \n",
+       "1  Positive                0.25                0.288462         0.835052  \n",
+       "2  Positive                0.40                0.875000         0.835052  \n",
+       "3  Positive                1.00                0.300000         0.835052  \n",
+       "4  Positive                1.00                0.300000         0.835052  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "df_merged.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here:\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
