--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -12,11 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import your libraries:\n"
+    "# Import your libraries:\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n"
    ]
   },
   {
@@ -37,11 +40,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from sklearn.datasets import load_diabetes\n",
+    "\n",
+    "diabetes = load_diabetes()"
    ]
   },
   {
@@ -53,11 +59,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': array([[ 0.03807591,  0.05068012,  0.06169621, ..., -0.00259226,\n",
+       "          0.01990842, -0.01764613],\n",
+       "        [-0.00188202, -0.04464164, -0.05147406, ..., -0.03949338,\n",
+       "         -0.06832974, -0.09220405],\n",
+       "        [ 0.08529891,  0.05068012,  0.04445121, ..., -0.00259226,\n",
+       "          0.00286377, -0.02593034],\n",
+       "        ...,\n",
+       "        [ 0.04170844,  0.05068012, -0.01590626, ..., -0.01107952,\n",
+       "         -0.04687948,  0.01549073],\n",
+       "        [-0.04547248, -0.04464164,  0.03906215, ...,  0.02655962,\n",
+       "          0.04452837, -0.02593034],\n",
+       "        [-0.04547248, -0.04464164, -0.0730303 , ..., -0.03949338,\n",
+       "         -0.00421986,  0.00306441]]),\n",
+       " 'target': array([151.,  75., 141., 206., 135.,  97., 138.,  63., 110., 310., 101.,\n",
+       "         69., 179., 185., 118., 171., 166., 144.,  97., 168.,  68.,  49.,\n",
+       "         68., 245., 184., 202., 137.,  85., 131., 283., 129.,  59., 341.,\n",
+       "         87.,  65., 102., 265., 276., 252.,  90., 100.,  55.,  61.,  92.,\n",
+       "        259.,  53., 190., 142.,  75., 142., 155., 225.,  59., 104., 182.,\n",
+       "        128.,  52.,  37., 170., 170.,  61., 144.,  52., 128.,  71., 163.,\n",
+       "        150.,  97., 160., 178.,  48., 270., 202., 111.,  85.,  42., 170.,\n",
+       "        200., 252., 113., 143.,  51.,  52., 210.,  65., 141.,  55., 134.,\n",
+       "         42., 111.,  98., 164.,  48.,  96.,  90., 162., 150., 279.,  92.,\n",
+       "         83., 128., 102., 302., 198.,  95.,  53., 134., 144., 232.,  81.,\n",
+       "        104.,  59., 246., 297., 258., 229., 275., 281., 179., 200., 200.,\n",
+       "        173., 180.,  84., 121., 161.,  99., 109., 115., 268., 274., 158.,\n",
+       "        107.,  83., 103., 272.,  85., 280., 336., 281., 118., 317., 235.,\n",
+       "         60., 174., 259., 178., 128.,  96., 126., 288.,  88., 292.,  71.,\n",
+       "        197., 186.,  25.,  84.,  96., 195.,  53., 217., 172., 131., 214.,\n",
+       "         59.,  70., 220., 268., 152.,  47.,  74., 295., 101., 151., 127.,\n",
+       "        237., 225.,  81., 151., 107.,  64., 138., 185., 265., 101., 137.,\n",
+       "        143., 141.,  79., 292., 178.,  91., 116.,  86., 122.,  72., 129.,\n",
+       "        142.,  90., 158.,  39., 196., 222., 277.,  99., 196., 202., 155.,\n",
+       "         77., 191.,  70.,  73.,  49.,  65., 263., 248., 296., 214., 185.,\n",
+       "         78.,  93., 252., 150.,  77., 208.,  77., 108., 160.,  53., 220.,\n",
+       "        154., 259.,  90., 246., 124.,  67.,  72., 257., 262., 275., 177.,\n",
+       "         71.,  47., 187., 125.,  78.,  51., 258., 215., 303., 243.,  91.,\n",
+       "        150., 310., 153., 346.,  63.,  89.,  50.,  39., 103., 308., 116.,\n",
+       "        145.,  74.,  45., 115., 264.,  87., 202., 127., 182., 241.,  66.,\n",
+       "         94., 283.,  64., 102., 200., 265.,  94., 230., 181., 156., 233.,\n",
+       "         60., 219.,  80.,  68., 332., 248.,  84., 200.,  55.,  85.,  89.,\n",
+       "         31., 129.,  83., 275.,  65., 198., 236., 253., 124.,  44., 172.,\n",
+       "        114., 142., 109., 180., 144., 163., 147.,  97., 220., 190., 109.,\n",
+       "        191., 122., 230., 242., 248., 249., 192., 131., 237.,  78., 135.,\n",
+       "        244., 199., 270., 164.,  72.,  96., 306.,  91., 214.,  95., 216.,\n",
+       "        263., 178., 113., 200., 139., 139.,  88., 148.,  88., 243.,  71.,\n",
+       "         77., 109., 272.,  60.,  54., 221.,  90., 311., 281., 182., 321.,\n",
+       "         58., 262., 206., 233., 242., 123., 167.,  63., 197.,  71., 168.,\n",
+       "        140., 217., 121., 235., 245.,  40.,  52., 104., 132.,  88.,  69.,\n",
+       "        219.,  72., 201., 110.,  51., 277.,  63., 118.,  69., 273., 258.,\n",
+       "         43., 198., 242., 232., 175.,  93., 168., 275., 293., 281.,  72.,\n",
+       "        140., 189., 181., 209., 136., 261., 113., 131., 174., 257.,  55.,\n",
+       "         84.,  42., 146., 212., 233.,  91., 111., 152., 120.,  67., 310.,\n",
+       "         94., 183.,  66., 173.,  72.,  49.,  64.,  48., 178., 104., 132.,\n",
+       "        220.,  57.]),\n",
+       " 'DESCR': '.. _diabetes_dataset:\\n\\nDiabetes dataset\\n----------------\\n\\nTen baseline variables, age, sex, body mass index, average blood\\npressure, and six blood serum measurements were obtained for each of n =\\n442 diabetes patients, as well as the response of interest, a\\nquantitative measure of disease progression one year after baseline.\\n\\n**Data Set Characteristics:**\\n\\n  :Number of Instances: 442\\n\\n  :Number of Attributes: First 10 columns are numeric predictive values\\n\\n  :Target: Column 11 is a quantitative measure of disease progression one year after baseline\\n\\n  :Attribute Information:\\n      - Age\\n      - Sex\\n      - Body mass index\\n      - Average blood pressure\\n      - S1\\n      - S2\\n      - S3\\n      - S4\\n      - S5\\n      - S6\\n\\nNote: Each of these 10 feature variables have been mean centered and scaled by the standard deviation times `n_samples` (i.e. the sum of squares of each column totals 1).\\n\\nSource URL:\\nhttps://www4.stat.ncsu.edu/~boos/var.select/diabetes.html\\n\\nFor more information see:\\nBradley Efron, Trevor Hastie, Iain Johnstone and Robert Tibshirani (2004) \"Least Angle Regression,\" Annals of Statistics (with discussion), 407-499.\\n(https://web.stanford.edu/~hastie/Papers/LARS/LeastAngle_2002.pdf)',\n",
+       " 'feature_names': ['age',\n",
+       "  'sex',\n",
+       "  'bmi',\n",
+       "  'bp',\n",
+       "  's1',\n",
+       "  's2',\n",
+       "  's3',\n",
+       "  's4',\n",
+       "  's5',\n",
+       "  's6'],\n",
+       " 'data_filename': '/home/slimbook/miniconda3/envs/ironhack_env/lib/python3.7/site-packages/sklearn/datasets/data/diabetes_data.csv.gz',\n",
+       " 'target_filename': '/home/slimbook/miniconda3/envs/ironhack_env/lib/python3.7/site-packages/sklearn/datasets/data/diabetes_target.csv.gz'}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "diabetes"
    ]
   },
   {
@@ -73,13 +157,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".. _diabetes_dataset:\n",
+      "\n",
+      "Diabetes dataset\n",
+      "----------------\n",
+      "\n",
+      "Ten baseline variables, age, sex, body mass index, average blood\n",
+      "pressure, and six blood serum measurements were obtained for each of n =\n",
+      "442 diabetes patients, as well as the response of interest, a\n",
+      "quantitative measure of disease progression one year after baseline.\n",
+      "\n",
+      "**Data Set Characteristics:**\n",
+      "\n",
+      "  :Number of Instances: 442\n",
+      "\n",
+      "  :Number of Attributes: First 10 columns are numeric predictive values\n",
+      "\n",
+      "  :Target: Column 11 is a quantitative measure of disease progression one year after baseline\n",
+      "\n",
+      "  :Attribute Information:\n",
+      "      - Age\n",
+      "      - Sex\n",
+      "      - Body mass index\n",
+      "      - Average blood pressure\n",
+      "      - S1\n",
+      "      - S2\n",
+      "      - S3\n",
+      "      - S4\n",
+      "      - S5\n",
+      "      - S6\n",
+      "\n",
+      "Note: Each of these 10 feature variables have been mean centered and scaled by the standard deviation times `n_samples` (i.e. the sum of squares of each column totals 1).\n",
+      "\n",
+      "Source URL:\n",
+      "https://www4.stat.ncsu.edu/~boos/var.select/diabetes.html\n",
+      "\n",
+      "For more information see:\n",
+      "Bradley Efron, Trevor Hastie, Iain Johnstone and Robert Tibshirani (2004) \"Least Angle Regression,\" Annals of Statistics (with discussion), 407-499.\n",
+      "(https://web.stanford.edu/~hastie/Papers/LARS/LeastAngle_2002.pdf)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "print(diabetes.DESCR)"
    ]
   },
   {
@@ -97,11 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Enter your answer here:\n"
+    "# Enter your answer here:\n",
+    "# 1_ 10 attributes/features corresponding to age, sex, mass index, blood pressure of people who has diabetes. From S1 \n",
+    "# we don't know what do they mean.\n",
+    "# 442\n"
    ]
   },
   {
@@ -115,11 +248,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.03807591  0.05068012  0.06169621 ... -0.00259226  0.01990842\n",
+      "  -0.01764613]\n",
+      " [-0.00188202 -0.04464164 -0.05147406 ... -0.03949338 -0.06832974\n",
+      "  -0.09220405]\n",
+      " [ 0.08529891  0.05068012  0.04445121 ... -0.00259226  0.00286377\n",
+      "  -0.02593034]\n",
+      " ...\n",
+      " [ 0.04170844  0.05068012 -0.01590626 ... -0.01107952 -0.04687948\n",
+      "   0.01549073]\n",
+      " [-0.04547248 -0.04464164  0.03906215 ...  0.02655962  0.04452837\n",
+      "  -0.02593034]\n",
+      " [-0.04547248 -0.04464164 -0.0730303  ... -0.03949338 -0.00421986\n",
+      "   0.00306441]]\n",
+      "[151.  75. 141. 206. 135.  97. 138.  63. 110. 310. 101.  69. 179. 185.\n",
+      " 118. 171. 166. 144.  97. 168.  68.  49.  68. 245. 184. 202. 137.  85.\n",
+      " 131. 283. 129.  59. 341.  87.  65. 102. 265. 276. 252.  90. 100.  55.\n",
+      "  61.  92. 259.  53. 190. 142.  75. 142. 155. 225.  59. 104. 182. 128.\n",
+      "  52.  37. 170. 170.  61. 144.  52. 128.  71. 163. 150.  97. 160. 178.\n",
+      "  48. 270. 202. 111.  85.  42. 170. 200. 252. 113. 143.  51.  52. 210.\n",
+      "  65. 141.  55. 134.  42. 111.  98. 164.  48.  96.  90. 162. 150. 279.\n",
+      "  92.  83. 128. 102. 302. 198.  95.  53. 134. 144. 232.  81. 104.  59.\n",
+      " 246. 297. 258. 229. 275. 281. 179. 200. 200. 173. 180.  84. 121. 161.\n",
+      "  99. 109. 115. 268. 274. 158. 107.  83. 103. 272.  85. 280. 336. 281.\n",
+      " 118. 317. 235.  60. 174. 259. 178. 128.  96. 126. 288.  88. 292.  71.\n",
+      " 197. 186.  25.  84.  96. 195.  53. 217. 172. 131. 214.  59.  70. 220.\n",
+      " 268. 152.  47.  74. 295. 101. 151. 127. 237. 225.  81. 151. 107.  64.\n",
+      " 138. 185. 265. 101. 137. 143. 141.  79. 292. 178.  91. 116.  86. 122.\n",
+      "  72. 129. 142.  90. 158.  39. 196. 222. 277.  99. 196. 202. 155.  77.\n",
+      " 191.  70.  73.  49.  65. 263. 248. 296. 214. 185.  78.  93. 252. 150.\n",
+      "  77. 208.  77. 108. 160.  53. 220. 154. 259.  90. 246. 124.  67.  72.\n",
+      " 257. 262. 275. 177.  71.  47. 187. 125.  78.  51. 258. 215. 303. 243.\n",
+      "  91. 150. 310. 153. 346.  63.  89.  50.  39. 103. 308. 116. 145.  74.\n",
+      "  45. 115. 264.  87. 202. 127. 182. 241.  66.  94. 283.  64. 102. 200.\n",
+      " 265.  94. 230. 181. 156. 233.  60. 219.  80.  68. 332. 248.  84. 200.\n",
+      "  55.  85.  89.  31. 129.  83. 275.  65. 198. 236. 253. 124.  44. 172.\n",
+      " 114. 142. 109. 180. 144. 163. 147.  97. 220. 190. 109. 191. 122. 230.\n",
+      " 242. 248. 249. 192. 131. 237.  78. 135. 244. 199. 270. 164.  72.  96.\n",
+      " 306.  91. 214.  95. 216. 263. 178. 113. 200. 139. 139.  88. 148.  88.\n",
+      " 243.  71.  77. 109. 272.  60.  54. 221.  90. 311. 281. 182. 321.  58.\n",
+      " 262. 206. 233. 242. 123. 167.  63. 197.  71. 168. 140. 217. 121. 235.\n",
+      " 245.  40.  52. 104. 132.  88.  69. 219.  72. 201. 110.  51. 277.  63.\n",
+      " 118.  69. 273. 258.  43. 198. 242. 232. 175.  93. 168. 275. 293. 281.\n",
+      "  72. 140. 189. 181. 209. 136. 261. 113. 131. 174. 257.  55.  84.  42.\n",
+      " 146. 212. 233.  91. 111. 152. 120.  67. 310.  94. 183.  66. 173.  72.\n",
+      "  49.  64.  48. 178. 104. 132. 220.  57.]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "print(diabetes.data)\n",
+    "print(diabetes.target)"
    ]
   },
   {
@@ -156,11 +343,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from sklearn import datasets, linear_model, metrics\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "X=diabetes.data #como np.array(data)\n",
+    "y=diabetes.target #como target"
    ]
   },
   {
@@ -172,11 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "lr_model = LinearRegression()\n",
+    "\n",
+    "diabetes_model = lr_model.fit(X, y)"
    ]
   },
   {
@@ -190,11 +385,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "#from sklearn.model_selection import train_test_split\n",
+    "#diabetes_data_train, diabetes_data_test, diabetes_target_train, diabetes_target_test = train_test_split(X, y, test_size = 0.2, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diabetes_data_train = X[:-20]\n",
+    "diabetes_data_test = X[-20:]\n",
+    "diabetes_target_train = y[:-20]\n",
+    "diabetes_target_test = y[-20:]"
    ]
   },
   {
@@ -206,11 +416,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficients: \n",
+      " [ -35.55683674 -243.1692265   562.75404632  305.47203008 -662.78772128\n",
+      "  324.27527477   24.78193291  170.33056502  731.67810787   43.02846824]\n",
+      "Intercept: \n",
+      " 152.5381335195406\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "print(\"Coefficients: \\n\", lr_model.coef_)\n",
+    "print(\"Intercept: \\n\", lr_model.intercept_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nfrom sklearn.metrics import mean_squared_error, r2_score\\nlr_model.fit(diabetes_data_train, diabetes_target_train) # Train the model using the training sets\\n\\ndiabetes_y_pred = lr_model.predict(diabetes_data_test) # Make predictions using the testing set\\n\\n\\n# The coefficients\\nprint(\\'Coefficients: \\n\\', lr_model.coef_)\\n# The mean squared error\\nprint(\"Mean squared error: %.2f\"\\n      % mean_squared_error(diabetes_target_test, diabetes_y_pred))\\n# Explained variance score: 1 is perfect prediction\\nprint(\\'Variance score: %.2f\\' % r2_score(diabetes_target_test, diabetes_y_pred))'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here:\n",
+    "\"\"\"\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "lr_model.fit(diabetes_data_train, diabetes_target_train) # Train the model using the training sets\n",
+    "\n",
+    "diabetes_y_pred = lr_model.predict(diabetes_data_test) # Make predictions using the testing set\n",
+    "\n",
+    "\n",
+    "# The coefficients\n",
+    "print('Coefficients: \\n', lr_model.coef_)\n",
+    "# The mean squared error\n",
+    "print(\"Mean squared error: %.2f\"\n",
+    "      % mean_squared_error(diabetes_target_test, diabetes_y_pred))\n",
+    "# Explained variance score: 1 is perfect prediction\n",
+    "print('Variance score: %.2f' % r2_score(diabetes_target_test, diabetes_y_pred))\"\"\"\n",
+    "\n"
    ]
   },
   {
@@ -726,7 +984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
