--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -235,11 +235,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -251,11 +252,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "diabetes_model = LinearRegression()"
    ]
   },
   {
@@ -269,11 +271,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "diabetes_data_train = diabetes[\"data\"][:-20]\n",
+    "diabetes_target_train = diabetes[\"target\"][:-20]\n",
+    "diabetes_data_test = diabetes[\"data\"][:-20]\n",
+    "diabetes_target_test = diabetes[\"target\"][:-20]"
    ]
   },
   {
@@ -285,11 +291,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(152.76430691633442,\n",
+       " array([ 3.03499549e-01, -2.37639315e+02,  5.10530605e+02,  3.27736980e+02,\n",
+       "        -8.14131709e+02,  4.92814588e+02,  1.02848452e+02,  1.84606489e+02,\n",
+       "         7.43519617e+02,  7.60951722e+01]))"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "diabetes_model.fit(diabetes_data_train, diabetes_target_train)\n",
+    "diabetes_model.intercept_, diabetes_model.coef_"
    ]
   },
   {
@@ -310,11 +332,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "y_test=diabetes_model.predict(diabetes_data_test)"
    ]
   },
   {
@@ -326,11 +349,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "y_true = diabetes_target_test"
    ]
   },
   {
@@ -342,11 +366,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53.86610852888564"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your explanation here:\n"
+    "# Your explanation here:\n",
+    "from sklearn.metrics import mean_squared_error as mse\n",
+    "\n",
+    "mse(y_true, y_test)**0.5"
    ]
   },
   {
@@ -381,11 +419,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                      y   R-squared:                       0.512\n",
+      "Model:                            OLS   Adj. R-squared:                  0.500\n",
+      "Method:                 Least Squares   F-statistic:                     43.16\n",
+      "Date:                Wed, 24 Jul 2019   Prob (F-statistic):           4.64e-58\n",
+      "Time:                        18:05:27   Log-Likelihood:                -2281.1\n",
+      "No. Observations:                 422   AIC:                             4584.\n",
+      "Df Residuals:                     411   BIC:                             4629.\n",
+      "Df Model:                          10                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const        152.7643      2.658     57.469      0.000     147.539     157.990\n",
+      "x1             0.3035     61.286      0.005      0.996    -120.169     120.776\n",
+      "x2          -237.6393     62.837     -3.782      0.000    -361.162    -114.117\n",
+      "x3           510.5306     68.156      7.491      0.000     376.553     644.508\n",
+      "x4           327.7370     66.876      4.901      0.000     196.275     459.199\n",
+      "x5          -814.1317    424.044     -1.920      0.056   -1647.697      19.434\n",
+      "x6           492.8146    344.227      1.432      0.153    -183.850    1169.480\n",
+      "x7           102.8485    219.463      0.469      0.640    -328.561     534.258\n",
+      "x8           184.6065    167.336      1.103      0.271    -144.334     513.547\n",
+      "x9           743.5196    175.359      4.240      0.000     398.807    1088.232\n",
+      "x10           76.0952     68.293      1.114      0.266     -58.152     210.343\n",
+      "==============================================================================\n",
+      "Omnibus:                        1.544   Durbin-Watson:                   2.026\n",
+      "Prob(Omnibus):                  0.462   Jarque-Bera (JB):                1.421\n",
+      "Skew:                           0.004   Prob(JB):                        0.491\n",
+      "Kurtosis:                       2.716   Cond. No.                         224.\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "import statsmodels.api as sm\n",
+    "\n",
+    "y=diabetes_target_train\n",
+    "X=diabetes_data_train\n",
+    "X=sm.add_constant(X)\n",
+    "\n",
+    "model = sm.OLS(y, X)\n",
+    "results = model.fit()\n",
+    "print(results.summary())"
    ]
   },
   {
@@ -404,12 +492,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Your answers here:"
+    "### Your answers here:\n",
+    "#### 1. Its's 43,16. The null hypothesis is rejected because the p-value is less than 0.05. \n",
+    "#### 2. t-test of the coefficients contain zeros and that means that those X values are not relevant. x1, x5, x7, x8 and x10\n",
+    "#### 3. The model should be improved removing those variables from the formula. \n"
    ]
   },
   {
@@ -430,11 +519,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "auto = pd.read_csv(\"../auto-mpg.csv\")"
    ]
   },
   {
@@ -446,11 +536,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(398, 8)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "auto.head()\n",
+    "auto.shape"
    ]
   },
   {
@@ -462,11 +565,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mpg             float64\n",
+       "cylinders         int64\n",
+       "displacement    float64\n",
+       "horse_power     float64\n",
+       "weight            int64\n",
+       "acceleration    float64\n",
+       "model_year        int64\n",
+       "car_name         object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "auto.dtypes"
    ]
   },
   {
@@ -478,11 +601,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    398.000000\n",
+       "mean      76.010050\n",
+       "std        3.697627\n",
+       "min       70.000000\n",
+       "25%       73.000000\n",
+       "50%       76.000000\n",
+       "75%       79.000000\n",
+       "max       82.000000\n",
+       "Name: model_year, dtype: float64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "auto.model_year.describe()"
    ]
   },
   {
@@ -494,11 +637,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "auto.dropna(inplace=True)"
    ]
   },
   {
@@ -510,11 +654,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4    199\n",
+       "8    103\n",
+       "6     83\n",
+       "3      4\n",
+       "5      3\n",
+       "Name: cylinders, dtype: int64"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "auto[\"cylinders\"].value_counts()"
    ]
   },
   {
@@ -530,11 +691,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>displacement</th>\n",
+       "      <th>horse_power</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>acceleration</th>\n",
+       "      <th>model_year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>307.0</td>\n",
+       "      <td>130.0</td>\n",
+       "      <td>3504</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>350.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>3693</td>\n",
+       "      <td>11.5</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>318.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3436</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>304.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>3433</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>17.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>3449</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg  cylinders  displacement  horse_power  weight  acceleration  \\\n",
+       "0  18.0          8         307.0        130.0    3504          12.0   \n",
+       "1  15.0          8         350.0        165.0    3693          11.5   \n",
+       "2  18.0          8         318.0        150.0    3436          11.0   \n",
+       "3  16.0          8         304.0        150.0    3433          12.0   \n",
+       "4  17.0          8         302.0        140.0    3449          10.5   \n",
+       "\n",
+       "   model_year  \n",
+       "0          70  \n",
+       "1          70  \n",
+       "2          70  \n",
+       "3          70  \n",
+       "4          70  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "auto_clean = auto.drop([\"car_name\"], axis=1)\n",
+    "auto_clean.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 4 3 1 1]\n",
+      "['cylinders', 'acceleration', 'model_year']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import RFE\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "X=[\"cylinders\", \"displacement\", \"horse_power\", \"weight\", \"acceleration\", \"model_year\"]\n",
+    "y= \"mpg\"\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(auto_clean[X], auto_clean[y], test_size=0.20)\n",
+    "model = LinearRegression()\n",
+    "selector = RFE(model, n_features_to_select=3, step=1)\n",
+    "selector.fit(X_train, y_train)\n",
+    "\n",
+    "print(selector.ranking_)\n",
+    "print([X[i] for i, chosen in enumerate(selector.support_) if chosen])"
    ]
   },
   {
@@ -548,11 +848,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "auto_model = LinearRegression()\n",
+    "auto_model.fit(X_train, y_train)"
    ]
   },
   {
@@ -581,11 +894,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8190883633965697"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "from sklearn.metrics import r2_score\n",
+    "y_pred = auto_model.predict(X_train)\n",
+    "r2_score(y_train, y_pred)"
    ]
   },
   {
@@ -601,11 +928,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 117,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7725594342416291"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "y_test_pred = auto_model.predict(X_test)\n",
+    "r2_score(y_test, y_test_pred)"
    ]
   },
   {
