bonus 2 a medias WIP

--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -808,18 +808,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 134,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 4 3 1 1]\n",
-      "['cylinders', 'acceleration', 'model_year']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.feature_selection import RFE\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -828,13 +819,7 @@
     "X=[\"cylinders\", \"displacement\", \"horse_power\", \"weight\", \"acceleration\", \"model_year\"]\n",
     "y= \"mpg\"\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(auto_clean[X], auto_clean[y], test_size=0.20)\n",
-    "model = LinearRegression()\n",
-    "selector = RFE(model, n_features_to_select=3, step=1)\n",
-    "selector.fit(X_train, y_train)\n",
-    "\n",
-    "print(selector.ranking_)\n",
-    "print([X[i] for i, chosen in enumerate(selector.support_) if chosen])"
+    "X_train, X_test, y_train, y_test = train_test_split(auto_clean[X], auto_clean[y], test_size=0.20)"
    ]
   },
   {
@@ -848,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +842,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,11 +1079,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "model = LinearRegression()\n",
+    "auto_model = RFE(model, n_features_to_select=3, step=1)"
    ]
   },
   {
@@ -1110,11 +1097,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 4 3 1 1]\n",
+      "['cylinders', 'acceleration', 'model_year']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "auto_model.fit(X_train, y_train)\n",
+    "print(auto_model.ranking_)\n",
+    "print([X[i] for i, chosen in enumerate(auto_model.support_) if chosen])"
    ]
   },
   {
